package edu.ifes.lfa.calc.data;

/**
 *
 * @author jefferson
 */
public enum ExprNotation {
    INFIX,
    PREFIX,
    POSTFIX;
}
