package edu.ifes.lfa.calc.data;

/**
 *
 * @author jefferson
 */
public abstract class Numeric extends Literal {
    public abstract Long intValue();
    public abstract Double decValue();
}
